kubernetes/zk-ui-service.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: zk-ui
    namespace: zookeeper-min
  spec:
    ports:
    - name: http
      port: 9090
      targetPort: 9090 
    selector:
      app: zk-ui      
    type: ClusterIP
