kubernetes/ingress-nginx-zk-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: biz
  labels:
    app: zk-ui
  name: zk-ui
  namespace: zookeeper-min
spec:
  rules:
  - host: zk-ui.future.com
    http:
      paths:
      - backend:
          serviceName: zk-ui
          servicePort: 9090
        path: /
